--- a/complex/DecisionScreen.html
+++ b/complex/DecisionScreen.html
@@ -151,6 +151,6 @@
 </script>
 
 
-<link href="{{ static 'global/empty.css' }}" rel="stylesheet"/>
+<link href="{{ static 'global/budget_jars.css' }}" rel="stylesheet"/>
 
 {{ endblock }}
