instructions for trivial treatment

--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -12,19 +12,21 @@ This experiment consists of several tasks, which are divided into two blocks.
 <br>
 <br>
 
-The first block contains five tasks which are potentially relevant for your final payment. In each of these tasks you are asked to make decisions in different economic choice problems. At the end of the experiment, <b>one of the decisions will be randomly chosen and will determine your payment</b>. This amount of money will be paid in addition to the initial endowment of £2.5. In total, the first block will take about 25 minutes.
+The first block contains five tasks which are potentially relevant for your final payment. 
+In each of these tasks you are asked to make decisions in different economic choice problems.
+Second block contains a different type of decision which would also affect your payment.
+Decision in the second block is also highly relevant to your payment.
 
 
 <br>
 <br>
 
-The second block of experimental tasks contains several different survey questions, which do not imply any payment. Please note, however, that you are only entitled to receiving a payment if <b>all tasks</b> in this experiment have been completed. The second block will take about 5 minutes.
+At the end of the experiment, <b>one of the decisions made in the first block will be randomly chosen and will determine your payment</b>. This amount of money will be paid in addition to the initial endowment of £2.5. In total, the first block will take about 25 minutes.
 
 <br>
 <br>
 
 Each task of the experiment (including introductory instructions) will be presented on a separate screen. When you have completed a task, the experiment will continue directly with the next task. You will only be informed at the very end of the experiment which decision was selected for payment and how large your payment will be.
-
 
 </div>
 </div>
