adding task instructions

--- a/consent_form/ConsentForm.html
+++ b/consent_form/ConsentForm.html
@@ -27,7 +27,7 @@ If you have any concerns about any aspect of the study or you have a complaint, 
 <br>
 <br>
 
-Our Data Controller (dpo@essex.ac.uk) can give more information on compliance of the research with GDPR.
+Our Data Controller (<a href="mailto:dpo@essex.ac.uk">dpo@essex.ac.uk</a>) can give more information on compliance of the research with GDPR.
 
 <br>
 <br>
