--- a/instructions_trivial/Instructions.html
+++ b/instructions_trivial/Instructions.html
@@ -29,7 +29,8 @@ At the end of the experiment, <b>one of the decisions made in the first block wi
 <br>
 
 The table on the decision screens will show the payoff if you have chosen to invest in this asset. 
-In the example below we explain the payments depending on the option chosen, 
+Options specify the payoffs two states of the world (Heads and Tales), which are equally likely and determined by the simulation of the coin flip.
+In the example below we explain the payments depending on the option chosen.
 If you chosoe Option 1 if the coin comes up heads you will receive 100 tokens and 0 tokens if it comes up tails.
 If you chosoe Option 2 if the coin comes up heads you will receive 0 tokens and 100 tokens if it comes up tails.
 
