--- a/instructions_complex/InstructionsPage1.html
+++ b/instructions_complex/InstructionsPage1.html
@@ -24,7 +24,7 @@ At the end of the experiment, <b>one of the decisions made in the first block wi
 <br>
 
 The table on the decision screens will show the payoff if you have chosen to invest in this asset. 
-Options specify the payoffs for heads and tales), which are equally likely and determined by the simulation of the coin flip.
+Options specify the payoffs for heads and tales, which are equally likely and determined by the simulation of the coin flip.
 For instance, each unit of the Option 1 would pay 90 tokens if the coin comes up heads and 10 tokens if the coin comes up tales.
 
 
