editing the instructions

--- a/instructions_complex/InstructionsPage2.html
+++ b/instructions_complex/InstructionsPage2.html
@@ -9,13 +9,13 @@ Block 1: Instructions (2)
 <div class="card bg-light">
     <div class="card-body">
 
-You start with endowment of 100 tokens, tokens are worthless on their own and you need to allocate the entire token budgets.
-Allocating one token to the option you buy one unit of the corresponding option.
-That is, on the example below 5 tokens are allocated to Option 2, that is the payment from this investment would be 350 if the coin comes up heads and 150 if the coin comes up tales.
-Given the total allocation the return would be 3700 if coin comes up heads and 5800 if coin comes up tales.
+You will be given a budget of 100 tokens and your task is to allocate this across the assets available. Your overall payoff will depend on how much you choose to allocate in each of the assets and on the outcome of the coin flip.
 
-<br>
-<br>
+<br><br> 
+
+In the example below, we explain the payments depending on the asset chosen. If you choose to invest 100 tokens in Option 1 and the coin comes up heads you will receive 9000 tokens. If the coin comes up tails, you will receive 1000 tokens. If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 3 and the coin comes up heads you will receive 6000 tokens. If the coin comes up tails you will receive 3500 tokens. 
+
+<br><br>
 
 To change the allocation you can drag the horizontal bar or use the <b>"+"</b> and <b>"-"</b> buttons.
 You can also type directly the number of tokens you want to allocate to the Option in the input form.
