--- a/instructions_trivial/Instructions.html
+++ b/instructions_trivial/Instructions.html
@@ -8,34 +8,20 @@ Block 1: Instructions
 
 <div class="card bg-light">
     <div class="card-body">
-The next screens explain how to play the investment game in Block 1. 
-Remember, a considerable amount of money is at stake so please pay careful attention to the instructions.
 
+The next screens explain how to play the investment game in Block 1. Remember, a considerable amount of money is at stake so please pay careful attention to the instructions. 
 
-<br>
-<br>
+<br><br>
+In this task, you will make 5 decisions. In each of these decisions, you can choose one of the two investment options. 
+At the end of the experiment, <b>one of the decisions made in the first block will be randomly chosen and will determine your payment</b>.
 
-In this game, you will make 5 decisions. 
-In each of these decisions, you can choose one of the two investment options. 
-The return of your investments depends on the toss of a coin (simulated by the computer).
+<br><br> 
+The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. There are two states of the world, (Heads and Tales). Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software).
 
+<br><br>
 
-<br>
-<br>
+In the example below we explain the payments depending on the asset chosen. If you choose Option 1 and the coin comes up heads you will receive 100 tokens. If the coin comes up tails, you will receive 0 tokens. If you choose Option 2 and the coin comes up heads you will receive 0 tokens. If the coin comes up tails you will receive 100 tokens. 
 
-At the end of the experiment, <b>one of the decisions made in the first block will be randomly chosen and will determine your payment</b>. This amount of money will be paid in addition to the initial endowment of £2.5. In total, the first block will take about 25 minutes.
-
-<br>
-<br>
-
-The table on the decision screens will show the payoff if you have chosen to invest in this asset. 
-Options specify the payoffs two states of the world (Heads and Tales), which are equally likely and determined by the simulation of the coin flip.
-In the example below we explain the payments depending on the option chosen.
-If you chosoe Option 1 if the coin comes up heads you will receive 100 tokens and 0 tokens if it comes up tails.
-If you chosoe Option 2 if the coin comes up heads you will receive 0 tokens and 100 tokens if it comes up tails.
-
-<br>
-<br>
 
 <img src="{{ static 'pictures/trivial_decision.png' }}" class="center"/>
 
@@ -46,7 +32,6 @@ Once you finalized the choice please click the "Next" button.
 </div>
 </div>
 
-<br>
 <br>
 
 <div style="float: center; text-align: center;">
