adding the quiz for trivial

--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -18,12 +18,12 @@ The first block contains five tasks. In each of these tasks you are asked to mak
 <br>
 <br>
 
-At the end of the experiment, <b>one of the decisions made in the first block will be randomly chosen and will determine your payment</b>. This money will be paid in addition to the initial endowment of £2.5.
+At the end of the experiment, one of the decisions made in the first block will be randomly chosen and will determine your payment. This money will be paid in addition to the initial endowment of £2.5.
 
 <br>
 <br>
 
-Each task of the experiment (including introductory instructions) will be presented on a separate screen. You will only be informed at the very end of the experiment which decision was selected for payment and how large your payment will be. 
+Each task of the experiment (including the introductory instructions) will be presented on a separate screen. You will only be informed at the very end of the experiment which decision was selected for payment and how large your payment will be. 
 
 </div>
 </div>
