--- a/instructions_complex/InstructionsPage1.html
+++ b/instructions_complex/InstructionsPage1.html
@@ -9,7 +9,7 @@ Block 1: Instructions (1)
 <div class="card bg-light">
     <div class="card-body">
 
-The next screens explain how to play the investment game in Block 1. Remember, a considerable amount of money is at stake so please pay careful attention to the instructions. 
+The following screens explain how to play the investment game.
 
 
 <br><br>
@@ -20,11 +20,11 @@ In this task, you will make 5 decisions. In each of these decisions, you will be
 <br>
 <br>
 
-At the end of the experiment, <b>one of the decisions made in the first block will be randomly chosen and will determine your payment</b>.
+At the end of the experiment, one of the decisions made in the first block will be randomly chosen and will determine your payment.
 
 <br><br>
 
-The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. There are two states of the world, (Heads and Tales). Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software). 
+The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. There are two states of the world, (Heads and Tails). Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software). 
 
 
 <br>
