--- a/instructions_complex/InstructionsPage2.html
+++ b/instructions_complex/InstructionsPage2.html
@@ -13,12 +13,11 @@ You will be given a budget of 100 tokens and your task is to allocate this acros
 
 <br><br> 
 
-In the example below, we explain the payments depending on the asset chosen. If you choose to invest 100 tokens in Option 1 and the coin comes up heads you will receive 9000 tokens. If the coin comes up tails, you will receive 1000 tokens. If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 3 and the coin comes up heads you will receive 6000 tokens. If the coin comes up tails you will receive 3500 tokens. 
+In the example below, we explain the payments depending on the asset chosen. If you choose to invest 100 tokens in Option 1 and the coin comes up heads you will receive 100*90 = 9000 tokens. If the coin comes up tails, you will receive 1000 tokens. If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 3 then you will receive *.+.*=6000 if the coin comes up heads or 3500 tokens if it comes up tails.
 
 <br><br>
 
-To change the allocation you can drag the horizontal bar or use the <b>"+"</b> and <b>"-"</b> buttons.
-You can also type directly the number of tokens you want to allocate to the Option in the input form.
+To change the allocation you can move the horizontal bar or use the <b>"+"</b> and <b>"-"</b> buttons.
 
 <br>
 <br>
