--- a/instructions_trivial/Instructions.html
+++ b/instructions_trivial/Instructions.html
@@ -9,18 +9,18 @@ Block 1: Instructions
 <div class="card bg-light">
     <div class="card-body">
 
-The next screens explain how to play the investment game in Block 1. Remember, a considerable amount of money is at stake so please pay careful attention to the instructions. 
+This screen explains how to play the investment game in Block 1. 
 
 <br><br>
-In this task, you will make 5 decisions. In each of these decisions, you can choose one of the two investment options. 
-At the end of the experiment, <b>one of the decisions made in the first block will be randomly chosen and will determine your payment</b>.
+In this task, you will make 5 decisions. In each of these decisions, you will choose one of two investment options. 
+At the end of the experiment, one of the decisions made in the first block will be randomly chosen and will determine your payment.
 
 <br><br> 
 The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. There are two states of the world, (Heads and Tales). Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software).
 
 <br><br>
 
-In the example below we explain the payments depending on the asset chosen. If you choose Option 1 and the coin comes up heads you will receive 100 tokens. If the coin comes up tails, you will receive 0 tokens. If you choose Option 2 and the coin comes up heads you will receive 0 tokens. If the coin comes up tails you will receive 100 tokens. 
+In the example below we explain the payments depending on the asset chosen. If you choose Option 1 and the coin comes up heads, then you will receive 100 tokens. If the coin comes up tails, then you will receive 0 tokens. If you choose Option 2 and the coin comes up heads, you will receive 0 tokens. If the coin comes up tails, you will receive 100 tokens. 
 
 
 <img src="{{ static 'pictures/trivial_decision.png' }}" class="center"/>
@@ -28,7 +28,8 @@ In the example below we explain the payments depending on the asset chosen. If y
 <br>
 <br>
  
-Once you finalized the choice please click the "Next" button.
+Once you finalized the choice, please click the "Next" button.
+
 </div>
 </div>
 
