adding the sixth alternative

--- a/complex_nodelegation/Results.html
+++ b/complex_nodelegation/Results.html
@@ -41,11 +41,17 @@
         <td> {{lottery_4.1}} </td>
         <td> {{ player.final_choice_a4 }}</td>
     </tr>
-    <tr style="border-bottom:2pt solid black;">
+    <tr>
         <td> Option 5 </td>
         <td> {{lottery_5.0}} </td>
         <td> {{lottery_5.1}} </td>
         <td> {{ player.final_choice_a5 }}</td>
+    </tr>
+    <tr style="border-bottom:2pt solid black;">
+        <td> Option 6 </td>
+        <td> {{lottery_6.0}} </td>
+        <td> {{lottery_6.1}} </td>
+        <td> {{ player.final_choice_a6 }}</td>
     </tr>
     <tr>
         <td> The state of the world is </td>
