overview instructions edited

--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -8,22 +8,27 @@ Overview
 <div class="card bg-light">
     <div class="card-body">
 
-This experiment consists of several tasks, which are divided into two blocks. 
+Please read the instructions carefully.
+After the instructions you will need to fill out the comprehension check in order to participate in the study.
+You would only be able to participate in the study conditionally upon successfully completing the quiz.
+If you fail to complete the comprehension check you would need to return the study without receiving any payment.  
+
 
 <br>
 <br>
 
-The first block contains five tasks. In each of these tasks you are asked to make decisions in different economic choice problems. The second block contains a different type of decision. All decisions in both blocks are potentially relevant for your payment. 
+You will face five tasks.
+In each of these tasks you are asked to make decisions in different economic choice problems. 
+The second block contains a different type of decision. 
+All decisions are equally likely to be selected for your payment. 
 
 <br>
 <br>
 
-At the end of the experiment, one of the decisions made in the first block will be randomly chosen and will determine your payment. This money will be paid in addition to the initial endowment of £2.5.
+At the end of the experiment, one of the decisions will be randomly chosen and will determine your payment. 
+This money will be paid in addition to the initial endowment of £2.5.
 
-<br>
-<br>
 
-Each task of the experiment (including the introductory instructions) will be presented on a separate screen. You will only be informed at the very end of the experiment which decision was selected for payment and how large your payment will be. 
 
 </div>
 </div>
