--- a/instructions_complex/InstructionsPage1.html
+++ b/instructions_complex/InstructionsPage1.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Block 1: Instructions (1)
+Instructions (Page 1 out of 3)
 </div>
 {{ endblock }}
 {{ block content }}
@@ -9,22 +9,16 @@ Block 1: Instructions (1)
 <div class="card bg-light">
     <div class="card-body">
 
-The following screens explain how to play the investment game.
-
-
-<br><br>
-
-In this task, you will make 5 decisions. In each of these decisions, you will be given a budget of 100 tokens and can choose to distribute it among several investment options. 
-
-
-<br>
-<br>
-
+In this experiment, you will make five decisions. 
+In each of these decisions, you will be given a budget of 100 tokens and can choose to distribute it among six investment options. 
 At the end of the experiment, one of the decisions made in the first block will be randomly chosen and will determine your payment.
 
+
 <br><br>
 
-The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. There are two states of the world, (Heads and Tails). Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software). 
+The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. 
+There are two states of the world: Heads and Tails. 
+Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software). 
 
 
 <br>
