--- a/instructions_trivial/Instructions.html
+++ b/instructions_trivial/Instructions.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Block 1: Instructions
+Instructions 
 </div>
 {{ endblock }}
 {{ block content }}
@@ -9,26 +9,33 @@ Block 1: Instructions
 <div class="card bg-light">
     <div class="card-body">
 
-This screen explains how to play the investment game in Block 1. 
-
-<br><br>
-In this task, you will make 5 decisions. In each of these decisions, you will choose one of two investment options. 
-At the end of the experiment, one of the decisions made in the first block will be randomly chosen and will determine your payment.
+In this experiment, you will make five decisions. 
+In each of these decisions, you will choose one of two investment options. 
+At the end of the experiment, one of the decisions made will be randomly chosen and will determine your payment.
 
 <br><br> 
-The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. There are two states of the world, (Heads and Tales). Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software).
+The table on the decision screen will show the payoff of the assets. 
+The payoff of each asset depends on the state of the world. 
+There are two states of the world: Heads and Tails. 
+Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software).
 
 <br><br>
 
-In the example below we explain the payments depending on the asset chosen. If you choose Option 1 and the coin comes up heads, then you will receive 100 tokens. If the coin comes up tails, then you will receive 0 tokens. If you choose Option 2 and the coin comes up heads, you will receive 0 tokens. If the coin comes up tails, you will receive 100 tokens. 
+In the example below we explain the payments depending on the asset chosen.
+If you choose Option 1 and the coin comes up heads, then you will receive 100 tokens, if the coin comes up tails, then you will receive 0 tokens. 
+If you choose Option 2 and the coin comes up heads, you will receive 0 tokens, if the coin comes up tails, you will receive 100 tokens. 
 
+<br>
+<br>
 
 <img src="{{ static 'pictures/trivial_decision.png' }}" class="center"/>
 
 <br>
 <br>
- 
-Once you finalized the choice, please click the "Next" button.
+
+The exchange rate is 20 tokens per £1.
+Tokens are converted to pounds in the end of the experiment.
+Once you made the choice, please click the "Next" button.
 
 </div>
 </div>
