--- a/instructions_trivial/Instructions.html
+++ b/instructions_trivial/Instructions.html
@@ -28,7 +28,7 @@ If you choose Option 2 and the coin comes up heads, you will receive 0 tokens, i
 <br>
 <br>
 
-<img src="{{ static 'pictures/trivial_decision.png' }}" class="center"/>
+<img src="{{ static 'images/trivial_decision.png' }}" class="center"/>
 
 <br>
 <br>
