--- a/instructions_complex/InstructionsPage3.html
+++ b/instructions_complex/InstructionsPage3.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Block 1: Instructions (3)
+Instructions (Page 3 out of 3)
 </div>
 {{ endblock }}
 {{ block content }}
