--- a/instructions_complex/InstructionsPage2.html
+++ b/instructions_complex/InstructionsPage2.html
@@ -16,7 +16,7 @@ Your overall payoff will depend on how much you choose to allocate in each of th
 
 In the example below, we explain the payments depending on the asset chosen. 
 If you choose to invest 100 tokens in Option 1 and the coin comes up heads, you would receive 100*100 = 10000 tokens, while if the coin comes up tails, you would receive 0 tokens. 
-If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 4 and coin comes up heands, you would receive 50*50+30*30=4000, while if the coin comes up tails you would receive 50*10+30*14=1200 tokens.
+If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 4 and coin comes up heads, you would receive 50*50+30*30=4000, while if the coin comes up tails you would receive 50*10+30*14=1200 tokens.
 
 <br>
 <br>
@@ -26,7 +26,7 @@ If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 4 and coin
 <br>
 <br>
 
-The exchange rate is 2000 tokes per £1. 
+The exchange rate is 2000 tokens per £1. 
 That is the earnings of 10000 tokens would correspond to £5, earnings of 4000 tokens would correspond to £4, and earnings of 1200 tokens would correspond to  £0.6 (60 pence).
 
     </div>
