--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -7,29 +7,14 @@ Overview
 
 <div class="card bg-light">
     <div class="card-body">
+        <font size="4">
+Please read the instructions carefully. You will have to pass a short quiz that tests your understanding of the instructions in order to participate in the study and receive your payments.
 
-Please read the instructions carefully.
-After the instructions you will need to fill out the comprehension check in order to participate in the study.
-You would only be able to participate in the study conditionally upon successfully completing the quiz.
-If you fail to complete the comprehension check you would need to return the study without receiving any payment.  
+<br><br>
 
+In the experiment you will face five tasks. Each task involves an economic decision. At the end of the experiment, one of your decisions will be randomly chosen and it will determine your task-based payment. You will also receive £2.5 for participation.
 
-<br>
-<br>
-
-You will face five tasks.
-In each of these tasks you are asked to make decisions in different economic choice problems. 
-The second block contains a different type of decision. 
-All decisions are equally likely to be selected for your payment. 
-
-<br>
-<br>
-
-At the end of the experiment, one of the decisions will be randomly chosen and will determine your payment. 
-This money will be paid in addition to the initial endowment of £2.5.
-
-
-
+        </font>
 </div>
 </div>
 
