--- a/instructions_complex/InstructionsPage1.html
+++ b/instructions_complex/InstructionsPage1.html
@@ -8,17 +8,14 @@ Instructions (Page 1 out of 3)
 
 <div class="card bg-light">
     <div class="card-body">
+        <font size="4">
 
-In this experiment, you will make five decisions. 
-In each of these decisions, you will be given a budget of 100 tokens and can choose to distribute it among six investment options. 
-At the end of the experiment, one of the decisions made in the first block will be randomly chosen and will determine your payment.
-
+In this experiment, you will make five decisions. In each of these decisions, you will distribute 100 tokens among six investment options. At the end of the experiment, one of the decisions will be randomly chosen and it will determine your payment.
 
 <br><br>
 
-The table on the decision screens will show the payoff of the assets. The payoff of each asset depends on the state of the world. 
-There are two states of the world: Heads and Tails. 
-Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software). 
+The table on the decision screen shows how the payoff of each option depends on the state of the world. There are two equally likely states of the world: Heads and Tails. The actual state will be determined by a virtual coin flip (using the computer’s random number generator).
+
 
 
 <br>
@@ -26,6 +23,7 @@ Both states are equally likely and which state is realized is determined by a co
 
 <img src="{{static 'pictures/complex_decision_1.png' }}" class="center"/>
 
+      </font>
     </div>
 </div>
 
