--- a/instructions_complex/InstructionsPage3.html
+++ b/instructions_complex/InstructionsPage3.html
@@ -8,22 +8,20 @@ Instructions (Page 3 out of 3)
 
 <div class="card bg-light">
     <div class="card-body">
+      <font size="4">
 
-To avoid wasting potential income the program would insure that you allocate all of the token budget.
-Once you have finalized the allocation you can click the <b>"Submit"</b> button. 
-If there are no leftover tokens, then <b>"Next"</b> button would appear and you would be able to finalize the allocation by clicking it.
+To distribute your 100 tokens, use your mouse to move the blue bars in the fourth column, or use the -/+ buttons in the last column. The number of tokens is shown in the last column between those buttons. If you want to start over on the distribution, just click the <b>"Reset"</b> button. 
 
-<br>
-<br>
+<br><br>
 
-If at any moment you are unhappy with the current allocation and want to start anew you can do so simply by clicking <b>"Reset"</b> button.
-This would restore the token budget to 100 and tokens allocated to all Options to 0.
+To finalize your distribution, first check that you have distributed all 100 tokens. (To avoid unnecessary waste, the program will not let you proceed if there are leftover tokens.) Then click the <b>"Submit"</b> button and, if there are no leftover tokens, a <b>"Next"</b> button will appear. Clicking it will finalize your distribution on that task. 
+
 
 <br>
 <br>
 
 <img src="{{ static 'pictures/complex_decision_2.png' }}" class="center"/>
-
+      </font>
     </div>
 </div>
 
