--- a/instructions_complex/InstructionsPage2.html
+++ b/instructions_complex/InstructionsPage2.html
@@ -8,15 +8,9 @@ Instructions (Page 2 out of 3)
 
 <div class="card bg-light">
     <div class="card-body">
+      <font size="4">
 
-You will be given a budget of 100 tokens and your task is to allocate this across the assets available. 
-Your overall payoff will depend on how much you choose to allocate in each of the assets and on the outcome of the coin flip.
-
-<br><br> 
-
-In the example below, we explain the payments depending on the asset chosen. 
-If you choose to invest 100 tokens in Option 1 and the coin comes up heads, you would receive 100*100 = 10000 tokens, while if the coin comes up tails, you would receive 0 tokens. 
-If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 4 and coin comes up heads, you would receive 50*50+30*30=4000, while if the coin comes up tails you would receive 50*10+30*14=1200 tokens.
+Your overall payoff will depend on how many tokens you choose to allocate to each option, and also on the outcome of the coin flip. In the example below, if you choose to invest all 100 tokens in Option 1, then you would receive 100*100 = 10000 tokens if the coin comes up Heads, and would receive 0 tokens if the coin comes up Tails. If you choose instead to invest 50 tokens in Option 2 and 50 tokens in Option 4, then you would receive 50*50+50*30 = 4000 tokens if the coin comes up Heads, and you would receive 50*10+50*14 = 1200 tokens if the coin comes up Tails.
 
 <br>
 <br>
@@ -26,9 +20,9 @@ If you choose to invest 50 tokens in Option 2 and 50 tokens in Option 4 and coin
 <br>
 <br>
 
-The exchange rate is 2000 tokens per £1. 
-That is the earnings of 10000 tokens would correspond to £5, earnings of 4000 tokens would correspond to £4, and earnings of 1200 tokens would correspond to  £0.6 (60 pence).
+The exchange rate is 2000 tokens per £1. That is a payment of 10000 tokens means that you would get £5, while for 4000 tokens you would get £2, and for 1200 tokens you would get £0.6 (=60 pence).
 
+      </font>
     </div>
 </div>
 
