--- a/instructions_trivial/Instructions.html
+++ b/instructions_trivial/Instructions.html
@@ -8,22 +8,17 @@ Instructions
 
 <div class="card bg-light">
     <div class="card-body">
-
-In this experiment, you will make five decisions. 
-In each of these decisions, you will choose one of two investment options. 
-At the end of the experiment, one of the decisions made will be randomly chosen and will determine your payment.
-
-<br><br> 
-The table on the decision screen will show the payoff of the assets. 
-The payoff of each asset depends on the state of the world. 
-There are two states of the world: Heads and Tails. 
-Both states are equally likely and which state is realized is determined by a coin flip (through the experimental software).
+        <font size="4">
+In this experiment, you will make five decisions. In each of these decisions, you will choose one of two investment options. 
 
 <br><br>
 
-In the example below we explain the payments depending on the asset chosen.
-If you choose Option 1 and the coin comes up heads, then you will receive 100 tokens, if the coin comes up tails, then you will receive 0 tokens. 
-If you choose Option 2 and the coin comes up heads, you will receive 0 tokens, if the coin comes up tails, you will receive 100 tokens. 
+The table on the decision screen shows how the payoff of each option depends on the state of the world. There are two equally likely states of the world: Heads and Tails. The actual state will be determined by a virtual coin flip (using the computer’s random number generator).
+
+<br><br>
+
+In the example decision below, if you choose Option 1, then you will receive 100 tokens if the coin comes up Heads, and will receive 0 tokens if the coin comes up Tails. If you choose Option 2, then you will receive 0 tokens if the coin comes up Heads, and 100 tokens if Tails.
+
 
 <br>
 <br>
@@ -33,10 +28,8 @@ If you choose Option 2 and the coin comes up heads, you will receive 0 tokens, i
 <br>
 <br>
 
-The exchange rate is 20 tokens per £1.
-Tokens are converted to pounds in the end of the experiment.
-Once you made the choice, please click the "Next" button.
-
+Tokens are converted to pounds in the end of the experiment at the rate of 20 tokens per £1. Once you made the choice, please click the "Next" button.
+      </font>
 </div>
 </div>
 
