--- a/complex_quiz/Question2.html
+++ b/complex_quiz/Question2.html
@@ -62,17 +62,36 @@ Question 2
     </tr>
     <tr>
         <td> Exchange Rate</td>
-        <td> 2000 tokens per  £1 </td>
+        <td> 1000 tokens per  £1 </td>
         <td> </td>
         <td> </td>
         <td> </td>
     </tr>
+</table>
+
+<table class="table">
     <tr>
         <td> What is the payment for this choice (<b>in £</b>)? </td>
-        <td> <input type="number" class="form-control" id="question2" name="question2" min="0" max="10000"> </td>
-        <td> </td>
-        <td> </td>
-        <td> </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question2" value="1" required> &nbsp; (10*40 + 100*60)/1000 = 6.4
+        </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question2" value="2" required> &nbsp; (50*40 + 100*60)/1000 = 8
+        </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question2" value="3" required> &nbsp; (10*40 + 0*60)/1000 = .4
+        </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question2" value="4" required> &nbsp; (50*40 + 100*60) = 8000
+        </td>
     </tr>
 </table>
 
