--- a/instructions_complex/InstructionsPage2.html
+++ b/instructions_complex/InstructionsPage2.html
@@ -20,7 +20,7 @@ Your overall payoff will depend on how many tokens you choose to allocate to eac
 <br>
 <br>
 
-The exchange rate is 2000 tokens per £1. That is a payment of 10000 tokens means that you would get £5, while for 4000 tokens you would get £2, and for 1200 tokens you would get £0.6 (=60 pence).
+The exchange rate is 1000 tokens per £1. That is a payment of 10000 tokens means that you would get £10, while for 4000 tokens you would get £4, and for 1200 tokens you would get £1.2 (= 1 pound and 20 pence).
 
       </font>
     </div>
