--- a/complex_quiz/Question1.html
+++ b/complex_quiz/Question1.html
@@ -62,17 +62,36 @@ Question 1
     </tr>
     <tr>
         <td> Exchange Rate</td>
-        <td> 2000 tokens per  £1 </td>
+        <td> 1000 tokens per  £1 </td>
         <td> </td>
         <td> </td>
         <td> </td>
     </tr>
+</table>
+
+<table class="table">
     <tr>
         <td> What is the payment for this choice (<b>in tokens</b>)? </td>
-        <td> <input type="number" class="form-control" id="question1" name="question1" min="0" max="10000"> </td>
-        <td> </td>
-        <td> </td>
-        <td> </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question1" value="1" required> &nbsp; (10*20 + 10*40 + 20*40)/1000 = 1.4
+        </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question1" value="2" required> &nbsp; 10*20 + 10*40 + 40*40 = 2200
+        </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question1" value="3" required> &nbsp; 10*20 + 10*40 + 20*40 = 1400
+        </td>
+    </tr>
+    <tr>
+        <td> 
+            <input id="question1" type="radio" name="question1" value="4" required> &nbsp; 70*20 + 50*40 + 40*40 = 5000
+        </td>
     </tr>
 </table>
 
