--- a/complex_nodelegation/Results.html
+++ b/complex_nodelegation/Results.html
@@ -89,6 +89,7 @@
     </tr>
     <tr>
         <td> Please click the link to complete the study </td>
+        <td> <b> <a href="https://app.prolific.co/submissions/complete?cc=6E1B1776">Complete</a> </b> </td>
         <td> </td>
         <td> </td>
         <td> </td>
