changing words in instructions

--- a/simple_instructions/Instructions.html
+++ b/simple_instructions/Instructions.html
@@ -18,11 +18,8 @@ The table on the decision screen shows how the payoff of each option depends on 
 <br><br>
 
 In the example decision below, if you choose Option 1, then you will receive 10 tokens if the coin comes up Heads, and will receive 70 tokens if the coin comes up Tails. 
-If you choose Option 2, then you will receive 10 tokens if the coin comes up Heads, and 50 tokens if Tails.
-If you choose Option 3, then you will receive 20 tokens if the coin comes up Heads, and 40 tokens if Tails.
-If you choose Option 4, then you will receive 22 tokens if the coin comes up Heads, and 34 tokens if Tails.
-If you choose Option 5, then you will receive 27 tokens if the coin comes up Heads, and 13 tokens if Tails.
-If you choose Option 6, then you will receive 3 tokens if the coin comes up Heads, and 91 tokens if Tails.
+If, for instance, you choose Option 3, then you will receive 20 tokens if the coin comes up Heads, and 40 tokens if Tails.
+If, for instance, you choose Option 6, then you will receive 3 tokens if the coin comes up Heads, and 91 tokens if Tails.
 
 
 
@@ -34,7 +31,13 @@ If you choose Option 6, then you will receive 3 tokens if the coin comes up Head
 <br>
 <br>
 
-Tokens are converted to pounds in the end of the experiment at the rate of 20 tokens per £1. Once you made the choice, please click the "Next" button.
+Tokens are converted to pounds in the end of the experiment at the rate of 20 tokens per £1. Once you made the choice, please click the "Next".
+
+<br>
+<br>
+
+Click the Next button below to proceed.
+
       </font>
 </div>
 </div>
