--- a/simple_quiz/Question2.html
+++ b/simple_quiz/Question2.html
@@ -81,11 +81,11 @@ The menu choices made are presented below.
         </tr>
 </table>
 
-Given that <b>Option 1</b> was chosen and the randomly determined state of the world is <b>Tails</b>.
+Given that <b>Option 1</b> was chosen and the randomly determined state of the world is <b>Tails</b> and the exchange rate is <b>20 tokens per £1</b>.
 
 <table class="table">
 <tr>
-    <td> What is the payment for this choice (<b>in tokens</b>)? </td>
+    <td> What is the payment for this choice (<b>in GBP</b>)? </td>
     <td> <input type="number" class="form-control" id="question2" name="question2" min="0" max="100"> </td>
 </tr>
 </table>
