--- a/simple_instructions/Instructions.html
+++ b/simple_instructions/Instructions.html
@@ -31,7 +31,7 @@ If, for instance, you choose Option 6, then you will receive 3 tokens if the coi
 <br>
 <br>
 
-Tokens are converted to pounds in the end of the experiment at the rate of 20 tokens per £1. Once you made the choice, please click the "Next".
+Tokens are converted to pounds in the end of the experiment at the rate of £1 per 20 tokens. Once you made the choice, please click the "Next".
 
 <br>
 <br>
