--- a/simple_quiz/Question2.html
+++ b/simple_quiz/Question2.html
@@ -81,7 +81,7 @@ The menu choices made are presented below.
         </tr>
 </table>
 
-Given that <b>Option 1</b> was chosen and the randomly determined state of the world is <b>Tails</b> and the exchange rate is <b>20 tokens per £1</b>.
+Given that <b>Option 1</b> was chosen and the randomly determined state of the world is <b>Tails</b> and the exchange rate is <b>£1 per 20 tokens</b>.
 
 <table class="table">
 <tr>
