changing the overview instruction

--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -8,13 +8,24 @@ Overview
 <div class="card bg-light">
     <div class="card-body">
         <font size="4">
-Please read the instructions carefully. You will have to pass a short quiz that tests your understanding of the instructions in order to participate in the study and receive your payments.
+In the experiment you will face three blocks of five tasks each. 
+Each task involves an economic decision. 
+At the end of the experiment, one of the blocks would be randomly (with equal likelihood) selected for payment.
+Out of this block you would be paid for one out of the first four decision you made at random and the last decision you made.
 
 <br><br>
 
-In the experiment you will face five tasks. Each task involves an economic decision. At the end of the experiment, one of your decisions will be randomly chosen and it will determine your task-based payment. You will also receive £2.5 for participation.
+You will certainly receive £3 for participation.
+You can also earn up to £10 depending on your decisions in the experiment and a random chance
 
-        </font>
+<br><br>
+
+You will be presented with the instructions for each block prior to taking decisions in the block.
+Please read the instructions for each block carefully as the decisions would affect your final payoff.
+You will also be presented with couple questions prior to starting each block in order to check that you understand the rules.
+
+
+</font>
 </div>
 </div>
 
