finalizing the treatment

--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -8,21 +8,23 @@ Overview
 <div class="card bg-light">
     <div class="card-body">
         <font size="4">
-In the experiment you will face three blocks of five tasks each. 
-Each task involves an economic decision. 
-At the end of the experiment, one of the blocks would be randomly (with equal likelihood) selected for payment.
-Out of this block you would be paid for one out of the first four decision you made at random and the last decision you made.
+In the experiment you will face three blocks of five tasks each. Each task involves an economic decision. 
+At the end of the experiment, one of the blocks will be randomly (with equal likelihood) selected for payment. 
+Out of this block you will be paid for one out of your first four decisions (with equal likelihood), and you also will be paid for your last decision in that block.
 
 <br><br>
 
-You will certainly receive £3 for participation.
-You can also earn up to £10 depending on your decisions in the experiment and a random chance
+You will certainly receive £3 for participation. 
+You will also earn an additional £0-20 depending on the random events described in these instructions and on the decisions you make. 
+Throughout experiment we use the tokens for the currency.
+At the end of the experiments tokens will be converted to pounds at the rate of 20 tokens per £1.
 
 <br><br>
 
-You will be presented with the instructions for each block prior to taking decisions in the block.
-Please read the instructions for each block carefully as the decisions would affect your final payoff.
-You will also be presented with couple questions prior to starting each block in order to check that you understand the rules.
+Before making decisions in each block, you will receive instructions for that block and a couple of questions to check your understanding.
+Please read the instructions carefully because fully understanding them will help you make better decisions and take home more money.
+
+<br><br>
 
 
 </font>
