--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -14,10 +14,10 @@ Out of this block you will be paid for one out of your first four decisions (wit
 
 <br><br>
 
-You will certainly receive £3 for participation. 
-You will also earn an additional £0-20 depending on the random events described in these instructions and on the decisions you make. 
+You will certainly receive <b>£3 for participation</b>. 
+You will also earn an <b>additional £0-10</b> depending on the random events described in these instructions and on the decisions you make. 
 Throughout experiment we use the tokens for the currency.
-At the end of the experiments tokens will be converted to pounds at the rate of 20 tokens per £1.
+At the end of the experiments tokens will be converted the rate of <b>20 tokens per £1</b>.
 
 <br><br>
 
