adding the instructions

--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -3,7 +3,9 @@
 Overview
 </div>
 {{ endblock }}
+
 {{ block content }}
+
 
 <div class="card bg-light">
     <div class="card-body">
@@ -16,7 +18,7 @@ Out of this block you will be paid for one out of your first four decisions (wit
 
 You will certainly receive <b>£3 for participation</b>. 
 You will also earn an <b>additional £0-10</b> depending on the random events described in these instructions and on the decisions you make. 
-Throughout experiment we use the tokens for the currency.
+Throughout experiment we use tokens as currency
 At the end of the experiments tokens will be converted the rate of <b>20 tokens per £1</b>.
 
 <br><br>
@@ -36,4 +38,6 @@ Please read the instructions carefully because fully understanding them will hel
 <div style="float: center; text-align: center;">
 {% next_button %}
 </div>
+
 {{ endblock }}
+
