finalizng the treatment

--- a/consent_form/InstructionsOverview.html
+++ b/consent_form/InstructionsOverview.html
@@ -10,21 +10,17 @@ Overview
 <div class="card bg-light">
     <div class="card-body">
         <font size="4">
-In the experiment you will face three blocks of five tasks each. Each task involves an economic decision. 
-At the end of the experiment, one of the blocks will be randomly (with equal likelihood) selected for payment. 
-Out of this block you will be paid for one out of your first four decisions (with equal likelihood), and you also will be paid for your last decision in that block.
+In this experiment you will face three blocks of five tasks each. Each task involves an economic decision. At the end of the experiment, one of the blocks will be randomly (with equal likelihood) selected for payment. Out of this block you will be paid for one out of your first four decisions (with equal likelihood), and you also will be paid for your last decision in that block.
+
 
 <br><br>
 
-You will certainly receive <b>£1.5 for participation</b>. 
-You will also earn an <b>additional £0-10</b> depending on the random events described in these instructions and on the decisions you make. 
-Throughout experiment we use tokens as currency
-At the end of the experiments tokens will be converted the rate of <b>20 tokens per £1</b>.
+You will certainly receive <b>£1.5 for participation</b>. You will also earn an additional £0-10 depending on the decisions you make and on the random events, as described below. Throughout the experiment we use tokens as currency. At the end of the experiment tokens will be converted at the rate of <b>20 tokens per £1</b>.
+
 
 <br><br>
 
-Before making decisions in each block, you will receive instructions for that block and a couple of questions to check your understanding.
-Please read the instructions carefully because fully understanding them will help you make better decisions and take home more money.
+Before making decisions in each block, you will receive instructions for that block and a couple of questions to check your understanding. Please read the instructions carefully because fully understanding them will help you make better decisions and take home more money.
 
 <br><br>
 
